--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="admin">
       <ion-icon name="school"></ion-icon>
       <ion-label>Añadir Centro</ion-label>
     </ion-tab-button>
