--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,17 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      ADMIN
-    </ion-title>
+    <ion-title>admin</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">CENTRO</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
   <ion-card >
     <img alt="nuevo centro" type="image/png" href="assets/icon/school.png"  />
     <ion-card-header>
@@ -19,5 +12,5 @@
       <ion-card-subtitle>Agrega un nuevo centro educativo</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
-  
+
 </ion-content>
