--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,8 +2,20 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="admin">
+      <ion-icon name="server"></ion-icon>
+      <ion-label>Admin</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="educativo">
       <ion-icon name="school"></ion-icon>
-      <ion-label>Añadir Centro</ion-label>
+      <ion-label>Centro educativo</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="empresa">
+      <ion-icon name="  "></ion-icon>
+      <ion-label>Empresa</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="alumno">
+      <ion-icon name="  "></ion-icon>
+      <ion-label>Alumno</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
