--- a/src/app/tabs_centrosEducativo/tabs.page.html
+++ b/src/app/tabs_centrosEducativo/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="empresa">
-      <ion-icon name="server"></ion-icon>
+      <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Empresa</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="alumno">
@@ -10,11 +10,11 @@
       <ion-label>Alumno</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="modulo">
-      <ion-icon name="  "></ion-icon>
+      <ion-icon name="briefcase-outline"></ion-icon>
       <ion-label>Modulo</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="periodopracticas">
-      <ion-icon name="  "></ion-icon>
+      <ion-icon name="color-palette-outline"></ion-icon>
       <ion-label>Periodo de practicas</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
