Empresa en desarrollo

--- a/src/app/empresa/tareas/tareas.page.html
+++ b/src/app/empresa/tareas/tareas.page.html
@@ -1,9 +1,197 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tareas</ion-title>
+    <ion-title>Tareas</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<nav>
+  <div style="display: flex; flex-direction: row;">
+    <ion-searchbar></ion-searchbar>
+    <ion-button (click)="this.addTask()" style="--background: #141414; zoom:1.25"><ion-icon name="duplicate-outline" style="color: white;"></ion-icon></ion-button>
+  </div>
+</nav>
 
+<ion-content>
+  <div class="container">
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+  </div>
 </ion-content>
