--- a/src/app/empresa/alumnos/alumnos.page.html
+++ b/src/app/empresa/alumnos/alumnos.page.html
@@ -1,9 +1,115 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>alumnos</ion-title>
+    <ion-title>Alumnos</ion-title>
   </ion-toolbar>
 </ion-header>
 
+<nav>
+  <div style="display: flex; flex-direction: row;">
+    <ion-searchbar></ion-searchbar>
+  </div>
+</nav>
+
 <ion-content>
-Esto es una prueba de la ventana
+  <div class="container">
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+    <div class="item">
+      <ion-card>
+        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
+        <ion-card-header>
+          <ion-card-title>Tarea1</ion-card-title>
+          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    </div>
+  </div>
 </ion-content>
