--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,9 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>admin</ion-title>
+    <ion-title>GFP Admin</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-Admin!
+  <div class="block">
+    <ion-searchbar (ionChange)="searchAdmin($event)"></ion-searchbar>
+  </div>
+  <div class="blockButton">
+    <ion-fab>
+      <ion-fab-button class="buttonAdd" (click)="openForm()">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div>
+  <ion-list>
+      <ion-item *ngFor="let user of searchedUser">
+        <ion-label>
+          <h2>{{user.name}}</h2>
+          <p>{{user.descripcion}}</p>
+        </ion-label>
+      </ion-item>
+  </ion-list>
 </ion-content>
