--- a/src/app/alumno/tareas/tareas.page.html
+++ b/src/app/alumno/tareas/tareas.page.html
@@ -1,9 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>principal</ion-title>
+    <ion-title>Tareas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+<tarea editable="true"></tarea>
+<tarea></tarea>
 </ion-content>
