--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -24,3 +24,13 @@
     margin-right: 15px;
     margin-top: -20px;
 }
+
+.iconExit {
+    display: flex;
+    align-items: flex-end;
+}
+
+.editCE {
+    font-size: 36px;
+    margin-left: 20px;
+}
