--- a/src/app/tabs_centrosEducativo/tabs.page.html
+++ b/src/app/tabs_centrosEducativo/tabs.page.html
@@ -1,21 +1,25 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
+    
     <ion-tab-button tab="empresa">
       <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>Empresa</ion-label>
     </ion-tab-button>
+
     <ion-tab-button tab="alumno">
       <ion-icon name="school"></ion-icon>
       <ion-label>Alumno</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="modulo">
+
+    <ion-tab-button tab="titulo">
       <ion-icon name="briefcase-outline"></ion-icon>
-      <ion-label>Modulo</ion-label>
+      <ion-label>titulo</ion-label>
     </ion-tab-button>
+
     <ion-tab-button tab="periodopracticas">
       <ion-icon name="color-palette-outline"></ion-icon>
-      <ion-label>Periodo de practicas</ion-label>
+      <ion-label>Practicas</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
