--- a/src/app/centroeducativo/alumno/alumno.page.html
+++ b/src/app/centroeducativo/alumno/alumno.page.html
@@ -1,9 +1,19 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>alumno</ion-title>
+    <ion-title>Alumno</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-searchbar id="searchalumno" placeholder="Buscar"></ion-searchbar>
+  <ion-card  id="open-modal" expand="block" (click)="nuevoalumno()">
+    <img src="assets/add.png"  />
+    <ion-card-header>
+      <ion-card-title>Nuevo Alumno</ion-card-title>
+      <ion-card-subtitle>Agrega un nuevo alumno</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
+  <ion-infinite-scroll #infinitescroll>
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
