--- a/src/app/centroeducativo/empresa/empresa.page.html
+++ b/src/app/centroeducativo/empresa/empresa.page.html
@@ -1,17 +1,17 @@
-<ion-header>
+<ion-header [translucent]="true" id="Empresa">
   <ion-toolbar>
-    <ion-title>empresa</ion-title>
+    <ion-title>{{empresa}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
-  <div>
-  <ion-card  id=" open-modal" expand="block" (click)="nuevaempresa()">
-    <img src="assets/school.png"  />
+  <ion-searchbar id="searchempresa" placeholder="Buscar"></ion-searchbar>
+  <ion-card  id="open-modal" (click)="nuevaempresa()">
+    <img src="assets/add.png"  />
     <ion-card-header>
       <ion-card-title>Nueva empresa</ion-card-title>
       <ion-card-subtitle>Agrega un nueva empresa</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
-</div>
 </ion-content>
