--- a/src/app/centroeducativo/empresa/empresa.page.scss
+++ b/src/app/centroeducativo/empresa/empresa.page.scss
@@ -2,29 +2,28 @@ ion-card{
     
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row-reverse;
     justify-content: center;    
-    width: 250px;
+    align-content: center;
+    width: 200px;
 }
-div{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    justify-content: center;    
-    width: 250px;
+ion-content{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 50%;
 }
-ion-modal {
-    --height: 50%;
-    --border-radius: 16px;
-    --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  }
-  
-  ion-modal::part(backdrop) {
-    background: rgba(209, 213, 219);
-    opacity: 1;
-  }
-  
-  ion-modal ion-toolbar {
-    --background: rgb(14 116 144);
-    --color: white;
-  }
+
+img{
+  width: 150px;
+  height: 150px;
+}
+
+.insideDiv {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 0;
+  width: 10px;
+  height: 10px;
+}
