--- a/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
+++ b/src/app/centroeducativo/periodopracticas/periodopracticas.page.html
@@ -1,9 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>periodopracticas</ion-title>
+    <ion-title>Periodo de {{practica}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-searchbar id="searchempresa" placeholder="Buscar"></ion-searchbar>
+  <ion-card id="open-modal" (click)="nuevaPractica()">
+    <ion-card-header>
+      <ion-card-title>Nueva Practica</ion-card-title>
+      <ion-card-subtitle>Agrega un nueva practica</ion-card-subtitle>
+    </ion-card-header>
+  </ion-card>
 
 </ion-content>
