--- a/src/app/edit-ce/edit-ce.page.html
+++ b/src/app/edit-ce/edit-ce.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>principal</ion-title>
+    <ion-title>edit-ce</ion-title>
   </ion-toolbar>
 </ion-header>
 
