--- a/src/app/components/plantilla-form/plantilla-form.component.html
+++ b/src/app/components/plantilla-form/plantilla-form.component.html
@@ -7,7 +7,6 @@
 <ion-content padding>
   <ion-list>
     <div style="display: flex; flex-direction: row;">
-      
       <ion-icon color="danger" *ngIf="editable=='true'" name="trash" style="zoom:1.5"></ion-icon>
     </div>
     <ion-item>
@@ -21,6 +20,7 @@
     </ion-item>
   </ion-list>
   <ion-button>Save</ion-button>
-  <ion-button>Cancel</ion-button>
+  <ion-button (click)="back()">Cancel</ion-button>
 </ion-content>
+
 
