--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,6 +4,32 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
+
+<ion-content>
+  <div id="header">
+    <h1>Bienvenido <br> a GestionFP</h1>
+    <ion-button style="display: grid; justify-content: center;" color="floatbuton" (click)="signin()">Iniciar sesión con
+      Google</ion-button>
+  </div>
+
+  <div class="animation-container">
+    <div class="lightning-container">
+      <div class="lightning white"></div>
+      <div class="lightning red"></div>
+    </div>
+    <div class="boom-container">
+      <div class="shape circle big white"></div>
+      <div class="shape circle white"></div>
+      <div class="shape triangle big yellow"></div>
+      <div class="shape disc white"></div>
+      <div class="shape triangle blue"></div>
+    </div>
+    <div class="boom-container second">
+      <div class="shape circle big white"></div>
+      <div class="shape circle white"></div>
+      <div class="shape disc white"></div>
+      <div class="shape triangle blue"></div>
+    </div>
+  </div>
 </ion-content>
