--- a/src/app/centroeducativo/alumno/alumno.page.html
+++ b/src/app/centroeducativo/alumno/alumno.page.html
@@ -10,15 +10,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-searchbar id="searchalumno" placeholder="Buscar"></ion-searchbar>
-  <ion-card  id="open-modal" expand="block" (click)="nuevoalumno()">
-    <img src="assets/add.png"  />
-    <ion-card-header>
-      <ion-card-title>Nuevo Alumno</ion-card-title>
-      <ion-card-subtitle>Agrega un nuevo alumno</ion-card-subtitle>
-    </ion-card-header>
-  </ion-card>
-  <ion-infinite-scroll #infinitescroll>
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
-  </ion-infinite-scroll>
+  <div id="divsearch">
+    <ion-searchbar id="searchempresa" placeholder="Buscar"></ion-searchbar>
+    <ion-button (click)="this.nuevoalumno()" style="zoom:1.25"><ion-icon
+        name="duplicate-outline"></ion-icon></ion-button>
+  </div>
+
+  <div id="divlist">
+    <ion-card id="open-modal" *ngFor="let lista of this.listAlumno;let i=index">
+      <img src="assets/add.png" style="z-index: -1;" />
+      <ion-card-header>
+        <ion-card-title>{{lista.nombre}}</ion-card-title>
+        <ion-card-subtitle>{{lista.correo}}</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+  </div>
 </ion-content>
