--- a/src/app/pages/add-ce/add-ce.page.html
+++ b/src/app/pages/add-ce/add-ce.page.html
@@ -1,26 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Nuevo Centro</ion-title>
+    <ion-title>addCE</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-list>
-    <div style="display: flex; flex-direction: row;">
-      <ion-icon color="danger" *ngIf="editable=='true'" name="trash" style="zoom:1.5"></ion-icon>
-    </div>
-    <ion-item>
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input type="text"></ion-input>
-      
-      <ion-label position="floating">Documento</ion-label>
-      <ion-input type="text"></ion-input>
+<ion-content>
 
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type="email"></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-button>Save</ion-button>
-  <ion-button (click)="back()">Cancel</ion-button>
 </ion-content>
-
