--- a/src/app/empresa/alumnos/alumnos.page.html
+++ b/src/app/empresa/alumnos/alumnos.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Alumnos</ion-title>
+    <ion-title>Alumno</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="cerrarSesion()">
+        <ion-icon slot="icon-only" name="exit"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -12,104 +17,12 @@
 
 <ion-content>
   <div class="container">
-    <div class="item">
-      <ion-card>
+      <ion-card class="item" id="open-modal" *ngFor="let lista of this.alumnos;let i=index">
         <ion-icon name="person-outline" style="zoom:10"></ion-icon>
         <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
+          <ion-card-title>{{lista.nombre}}</ion-card-title>
+          <ion-card-subtitle>{{lista.correo}}</ion-card-subtitle>
         </ion-card-header>
       </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="person-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
   </div>
 </ion-content>
