--- a/src/app/empresa/tareas/tareas.page.html
+++ b/src/app/empresa/tareas/tareas.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Tareas</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="cerrarSesion()">
+        <ion-icon slot="icon-only" name="exit"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -13,177 +18,6 @@
 
 <ion-content>
   <div class="container">
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-    <div class="item">
-      <ion-card>
-        <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
-        <ion-card-header>
-          <ion-card-title>Tarea1</ion-card-title>
-          <ion-card-subtitle>Alumno1</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
     <div class="item">
       <ion-card>
         <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
