--- a/src/app/pages/new-task/new-task.page.html
+++ b/src/app/pages/new-task/new-task.page.html
@@ -13,6 +13,15 @@
       <ion-label position="floating">Tarea</ion-label>
       <ion-input formControlName="taskname" placeholder="Nombre de la Tarea" ></ion-input>
     </ion-item>
+    <ion-list>
+      <ion-item>
+        <ion-label position="floating">Alumno</ion-label>
+        <ion-select interface="popover" formControlName="taskuser" placeholder="Selecciona alumno">
+          <ion-select-option
+            *ngFor="let alumnos of this.alumnos;let i=index">{{alumnos.nombre}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
     <ion-item>
       <ion-label>Estado</ion-label>
       <ion-checkbox formControlName="taskstatus" slot="end" ></ion-checkbox>
