--- a/src/app/pages/practicas/practicas.page.html
+++ b/src/app/pages/practicas/practicas.page.html
@@ -9,15 +9,12 @@
 
 <ion-content>
   <form [formGroup]="formPractica" (ngSubmit)="submitForm()">
-
-
     <!--SELECIONAR EMPRESA-->
     <ion-list>
       <ion-item>
         <ion-label position="floating">Empresa</ion-label>
-        <ion-select interface="popover" formControlName="Empresa" placeholder="Selecciona empresa">
-          <ion-select-option value="apples"
-            *ngFor="let listaE of this.listEmp;let i=index">{{listaE.nombre}}</ion-select-option>
+        <ion-select interface="popover" formControlName="id_empresa" placeholder="Selecciona empresa">
+          <ion-select-option *ngFor="let listaE of this.listEmp;let i=index" [value]="listaE.id" >{{listaE.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
@@ -26,9 +23,8 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Alumno</ion-label>
-        <ion-select interface="popover" formControlName="Alumno" placeholder="Selecciona alumno">
-          <ion-select-option value="apples"
-            *ngFor="let listaA of this.listAlu;let i=index">{{listaA.nombre}}</ion-select-option>
+        <ion-select interface="popover" formControlName="id_alumno" placeholder="Selecciona alumno">
+          <ion-select-option *ngFor="let listaA of this.listAlu;let i=index" [value]="listaA.id">{{listaA.nombre}}</ion-select-option>
         </ion-select>
       </ion-item>
     </ion-list>
@@ -36,15 +32,34 @@
     <!--SELECIONAR FECHA INICIO-->
     <ion-item>
       <ion-label position="fixed">F. Inicio</ion-label>
-      <ion-datetime-button datetime="finicio" ></ion-datetime-button>
+      <ion-datetime-button targ slot="end" datetime="finicio">
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime presentation="date" id="finicio" formControlName="tiempo_inicio" displayFormat="YYYY-MM-DDTHH:mm:ss.SSSZ" (ionChange)="onDateChange($event)"></ion-datetime>
+          </ng-template>
+        </ion-modal>
+      </ion-datetime-button>
     </ion-item>
-
 
     <!--SELECIONAR FECHA FIN-->
     <ion-item>
       <ion-label position="fixed">F. fin</ion-label>
-      <ion-datetime-button datetime="ffin"></ion-datetime-button>
+      <ion-datetime-button targ slot="end" datetime="ffin">
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime presentation="date" id="ffin" formControlName="tiempo_final"displayFormat="YYYY-MM-DDTHH:mm:ss.SSSZ" (ionChange)="onDateChange($event)" ></ion-datetime>
+          </ng-template>
+        </ion-modal>
+      </ion-datetime-button>
     </ion-item>
+
+    <!--SELECCIONAR EL ESTADO-->
+    <ion-item>
+      <ion-label>Estado</ion-label>
+      <ion-checkbox formControlName="estado" slot="end" ></ion-checkbox>
+    </ion-item>
+
+    <!--PRESIONA EL BOTÓN GUARDAR-->
     <ion-button shape="round" color="primary" fill="outline" type="submit"
       [disabled]="!formPractica.valid">Guardar</ion-button>
   </form>
