--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>GFP Admin</ion-title>
+    <ion-title>Admin</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <div class="block">
     <ion-searchbar (ionChange)="searchAdmin($event)"></ion-searchbar>
   </div>
@@ -23,12 +23,20 @@
   <ion-list>
       <ion-item *ngFor="let user of searchedUser">
         <ion-label>
-          <h2>{{user.name}}</h2>
-          <p>{{user.descripcion}}</p>
+          <h2>{{users.nombre}}</h2>
         </ion-label>
       </ion-item>
   </ion-list>
+  <ion-list>
+    <ion-item *ngFor="let user of userCEList">
+      <h2>{{users.nombre}}</h2>
+    </ion-item>
+  </ion-list>
 
+  <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
+    <ion-refresher-content pullingIcon="chevron-down-circle-outline" refreshingSpinner="circles"></ion-refresher-content>
+  </ion-refresher>
+  
   <div class="editCE">
     <ion-icon name="pencil-outline" (click)="editForm()"></ion-icon>
   </div>
