--- a/src/app/pages/add-ce/add-ce.page.html
+++ b/src/app/pages/add-ce/add-ce.page.html
@@ -3,24 +3,31 @@
     <ion-title>Nuevo Centro</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content padding>
-  <ion-list>
-    <div style="display: flex; flex-direction: row;">
-      <ion-icon color="danger" *ngIf="editable=='true'" name="trash" style="zoom:1.5"></ion-icon>
-    </div>
-    <ion-item>
-      <ion-label position="floating">Nombre</ion-label>
-      <ion-input type="text"></ion-input>
+ 
+<ion-content class="ion-padding">
+  <ion-card-content>
+    <form [formGroup]="addUserCEForm" (ngSubmit)="onSubmit()">
+      <div style="display: flex; flex-direction: row;">
+        <ion-icon color="danger" *ngIf="editable=='true'" name="trash" style="zoom:1.5"></ion-icon>
+      </div>
+      <ion-item>
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input type="text" formControlName="nombre"></ion-input>
+      </ion-item>
       
-      <ion-label position="floating">Documento</ion-label>
-      <ion-input type="text"></ion-input>
-
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input type="email"></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-button>Save</ion-button>
-  <ion-button (click)="back()">Cancel</ion-button>
+      <ion-item>
+        <ion-label position="floating">Documento</ion-label>
+        <ion-input type="text" formControlName="doc"></ion-input>
+      </ion-item>
+        
+      <ion-item>
+        <ion-label position="floating">Correo electrónico</ion-label>
+        <ion-input type="email" formControlName="correo"></ion-input>
+      </ion-item>
+  
+      <ion-button type="submit" [disabled]="!addUserCEForm.valid">Save</ion-button>
+      <ion-button (click)="back()">Cancel</ion-button>
+    </form>
+  </ion-card-content>
 </ion-content>
 
