--- a/src/app/pages/edit-ce/edit-ce.page.html
+++ b/src/app/pages/edit-ce/edit-ce.page.html
@@ -19,7 +19,6 @@
       <ion-input type="email"></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button>Update</ion-button>
-  <ion-button (click)="back()">Cancel</ion-button>
+  <ion-button (click)="back()">Update</ion-button>
 </ion-content>
 
