Nuevos Cambios Admin-AddCEAdmin-EditCEAdmin

--- a/src/app/pages/add-ce/add-ce.page.html
+++ b/src/app/pages/add-ce/add-ce.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>addCE</ion-title>
+    <ion-title>Nuevo Centro</ion-title>
   </ion-toolbar>
 </ion-header>
  
@@ -31,5 +31,3 @@
   </ion-card-content>
 
 <ion-content>
-
-</ion-content>
