--- a/src/app/centroeducativo/alumno/alumno.page.html
+++ b/src/app/centroeducativo/alumno/alumno.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Alumno</ion-title>
-    <ion-buttons slot="end">
+    <!--Botón qu permite salir de la sesión actual con el ultimo usuario logueado-->
+    <ion-buttons slot="end">   
       <ion-button (click)="cerrarSesion()">
         <ion-icon slot="icon-only" name="exit"></ion-icon>
       </ion-button>
@@ -11,13 +12,15 @@
 
 <ion-content>
   <div id="divsearch">
+    <!--Busqueda y filtrado de alumnos-->
     <ion-searchbar id="searchempresa" placeholder="Buscar"></ion-searchbar>
+     <!--Botón para agregar un nuevo alumno-->
     <ion-button (click)="this.nuevoalumno()" style="zoom:1.25"><ion-icon
         name="duplicate-outline"></ion-icon></ion-button>
   </div>
-
+  <!--Lista de objetos de tipo alumno que al seleccionar un "ion-card" se abra un modal con el contenido de ese alumno en concreto-->
   <div id="divlist">
-    <ion-card id="open-modal" *ngFor="let lista of this.listAlumno;let i=index">
+    <ion-card id="open-modal" *ngFor="let lista of this.listAlumno;let i=index" (click) ="this.editalumno(lista)">
       <img src="assets/add.png" style="z-index: -1;" />
       <ion-card-header>
         <ion-card-title>{{lista.nombre}}</ion-card-title>
