--- a/src/app/pages/usuario-edit/usuario-edit.page.html
+++ b/src/app/pages/usuario-edit/usuario-edit.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <form [formGroup]="formUsuario" (ngSubmit)="submitForm()">
+  <form [formGroup]="putUsuario" (ngSubmit)="submitForm()">
     <ion-item>
       <ion-label position="floating">Nombre</ion-label>
       <ion-input formControlName="nombre" placeholder="nombre de usuario" ></ion-input>
@@ -18,12 +18,12 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">DNI/NIF</ion-label>
-      <ion-input formControlName="doc" placeholder="documento de identidad" ></ion-input>
+      <ion-input formControlName="documentos" placeholder="documento de identidad" ></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Alta</ion-label>
       <ion-checkbox formControlName="alta" slot="end" ></ion-checkbox>
     </ion-item>
-    <ion-button shape="round" color="primary" fill="outline" type="submit" [disabled]="!formUsuario.valid">Guardar</ion-button>
+    <ion-button shape="round" color="primary" fill="outline" type="submit" [disabled]="!putUsuario.valid">Guardar</ion-button>
   </form>
 </ion-content>
