--- a/src/app/pages/edit-ce/edit-ce.page.html
+++ b/src/app/pages/edit-ce/edit-ce.page.html
@@ -1,14 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>editCE</ion-title>
+    <ion-title>Actualizar Centro</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <ion-list>
+    <div style="display: flex; flex-direction: row;">
+      <ion-icon color="danger" *ngIf="editable=='false'" name="trash" style="zoom:1.5"></ion-icon>
+    </div>
+    <ion-item>
+      <ion-label position="floating">Nombre</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Documento</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+      
+    <ion-item>
       <ion-label position="floating">Correo electrónico</ion-label>
       <ion-input type="email"></ion-input>
     </ion-item>
   </ion-list>
-  <ion-button (click)="back()">Update</ion-button>
+
+  <ion-button>Update</ion-button>
 
 </ion-content>
