Empresa Tarea Edit

--- a/src/app/empresa/tareas/tareas.page.html
+++ b/src/app/empresa/tareas/tareas.page.html
@@ -18,10 +18,10 @@
 
 <ion-content>
   <div class="container">
-    <ion-card (click)="this.editTask()" class="item" id="open-modal" *ngFor="let lista of this.tareas;let i=index">
+    <ion-card (click)="this.editTask(tarea)" class="item" id="open-modal" *ngFor="let tarea of this.tareas;let i=index">
       <ion-icon name="document-attach-outline" style="zoom:10"></ion-icon>
       <ion-card-header>
-        <ion-card-title>{{lista.tarea}}</ion-card-title>
+        <ion-card-title>{{tarea.tarea}}</ion-card-title>
       </ion-card-header>
     </ion-card>
   </div>
