--- a/src/app/empresa/alumnos/alumnos.page.html
+++ b/src/app/empresa/alumnos/alumnos.page.html
@@ -17,11 +17,11 @@
 
 <ion-content>
   <div class="container">
-      <ion-card class="item" id="open-modal" *ngFor="let lista of this.alumnos;let i=index">
+      <ion-card (click)="this.viewAlumn(alumno)" class="item" id="open-modal" *ngFor="let alumno of this.alumnos;let i=index">
         <ion-icon name="person-outline" style="zoom:10"></ion-icon>
         <ion-card-header>
-          <ion-card-title>{{lista.nombre}}</ion-card-title>
-          <ion-card-subtitle>{{lista.correo}}</ion-card-subtitle>
+          <ion-card-title>{{alumno.nombre}}</ion-card-title>
+          <ion-card-subtitle>{{alumno.correo}}</ion-card-subtitle>
         </ion-card-header>
       </ion-card>
   </div>
